<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_menu"
        android:orderInCategory="1"
        android:icon="@drawable/menu_icon"
        android:title="@string/main_menu_string"
        android:iconTint="@color/colorPrimaryDark"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="1"
                android:title="@string/settings_title" />

            <item
                android:id="@+id/open_favorites"
                android:orderInCategory="2"
                android:title="@string/favorites_activity_name" />

            <item
                android:id="@+id/exit_app"
                android:orderInCategory="3"
                android:title="@string/exit_app_string" />
        </menu>
    </item>

</menu>