<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@null"
    android:padding="10dp">

    <ImageView
        android:id="@+id/loc_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/found_place_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintBottom_toTopOf="@id/distance"
        card_view:layout_constraintStart_toEndOf="@id/loc_image"
        card_view:layout_constraintTop_toTopOf="@id/loc_image"
        card_view:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_place_distance"
        android:textColor="@color/colorPrimaryDark"
        card_view:layout_constraintStart_toStartOf="@id/name"
        card_view:layout_constraintTop_toBottomOf="@id/name"
        card_view:layout_constraintBottom_toTopOf="@id/address"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/found_place_address"
        android:textColor="@color/colorPrimaryDark"
        android:maxLines="1"
        android:ellipsize="end"
        card_view:layout_constraintStart_toStartOf="@id/name"
        card_view:layout_constraintTop_toBottomOf="@id/distance"
        card_view:layout_constraintBottom_toTopOf="@id/phone"
        card_view:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_place_phone"
        android:textColor="@color/colorPrimaryDark"
        card_view:layout_constraintStart_toStartOf="@id/name"
        card_view:layout_constraintTop_toBottomOf="@id/address"
        card_view:layout_constraintBottom_toBottomOf="@id/loc_image"/>

</android.support.constraint.ConstraintLayout>