<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeRelLayout">

    <TextView
        android:id="@+id/button_location"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/nearby_title"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_address_bar"/>

    <TextView
        android:id="@+id/button_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/text_search_title"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_location"
        app:layout_constraintTop_toBottomOf="@id/current_address_bar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/current_address_bar">

        <ImageView
            android:id="@+id/current_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_gps" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="3.2"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/general_na"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/search_container"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:elevation="10dp"
        android:background="@drawable/white_border"
        app:layout_constraintTop_toBottomOf="@id/button_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:tint="@color/colorAccent"
            android:src="@drawable/ic_magnify"
            />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/input_search"
            android:imeOptions="actionSearch"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/search_hint"
            android:layout_toEndOf="@id/ic_magnify"/>

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>